--- a/app/src/main/res/layout/course_item_fragment.xml
+++ b/app/src/main/res/layout/course_item_fragment.xml
@@ -17,7 +17,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="horizontal"
             android:weightSum="4">
