--- a/app/src/main/res/layout/course_item_fragment.xml
+++ b/app/src/main/res/layout/course_item_fragment.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    app:cardCornerRadius="@dimen/text_title_size"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="@dimen/standard_margin"
     app:cardUseCompatPadding="true"
     app:cardElevation="@dimen/standard_margin">
 
