--- a/app/src/main/res/layout/course_item_fragment.xml
+++ b/app/src/main/res/layout/course_item_fragment.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/small_margin"
+    android:layout_marginStart="@dimen/standard_margin"
+    android:layout_marginEnd="@dimen/standard_margin"
     app:cardElevation="2dp"
     app:cardBackgroundColor="#F5F5F5"
     app:cardCornerRadius="10dp">
